# noru

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  paper.bib  paper.md
.github/workflows/: ci.yml
documents/: adoption_evidence.md  benchmark_inventory.md  nnue-study-guide.md
examples/: feature_loop.rs  ffi_embed.c  multi_layer.rs  quantize_roundtrip.rs  xor.rs
src/: audit.rs  config.rs  ffi.rs  lib.rs  network.rs  quant.rs  trainer.rs
src/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs
tests/: train_infer_roundtrip.rs
